5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1716_2505.log
== SUBMITION (2019-06-09 15:32:14) 
-- CODE:
from math import*
x = eval(input("Digite o angulo: "))
k = int(input("Digite o numero de termos: "))
soma = 0
cont = 0
while(cont <= k):
	f = ((((-1)**cont))*(angulo**(2*cont+1))/(factorial(2*cont+1))) 
	soma = soma + f
	cont = cont + 1
print(round(soma,10))	
	
-- EXECUTION TIME:
0.749924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 7, in <module>
    f = ((((-1)**cont))*(angulo**(2*cont+1))/(factorial(2*cont+1))) 
NameError: name 'angulo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:32:19) 
-- CODE:
from math import*
x = eval(input("Digite o angulo: "))
k = int(input("Digite o numero de termos: "))
soma = 0
cont = 0
while(cont <= k):
	f = ((((-1)**cont))*(angulo**(2*cont+1))/(factorial(2*cont+1))) 
	soma = soma + f
	cont = cont + 1
print(round(soma,10))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    f = ((((-1)**cont))*(angulo**(2*cont+1))/(factorial(2*cont+1))) 
NameError: name 'angulo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:33:05) 
-- CODE:
from math import*
x = eval(input("Digite o angulo: "))
k = int(input("Digite o numero de termos: "))
soma = 0
cont = 0
while(cont <= k):
	f = ((((-1)**cont))*(x**(2*cont+1))/(factorial(2*cont+1))) 
	soma = soma + f
	cont = cont + 1
print(round(soma,10))	
	
-- EXECUTION TIME:
0.744457
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.9999999437
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.0000035426
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8660212717
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:33:11) 
-- CODE:
from math import*
x = eval(input("Digite o angulo: "))
k = int(input("Digite o numero de termos: "))
soma = 0
cont = 0
while(cont <= k):
	f = ((((-1)**cont))*(x**(2*cont+1))/(factorial(2*cont+1))) 
	soma = soma + f
	cont = cont + 1
print(round(soma,10))	
	
-- OUTPUT:
0.9999999437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:34:17) 
-- CODE:
from math import*
x = eval(input("Digite o angulo: "))
k = int(input("Digite o numero de termos: "))
soma = 0
cont = 0
while(cont <= k):
	f = ((((-1)**cont))*(x**(2*cont+1))/(factorial(2*cont+1))) 
	soma = soma + f
	cont = cont + 1
print(round(soma,10))	
	
-- EXECUTION TIME:
0.789623
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.9999999437
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.0000035426
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8660212717
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:34:37) 
-- CODE:
from math import*
x = eval(input("Digite o angulo: "))
k = int(input("Digite o numero de termos: ")) -1
soma = 0
cont = 0
while(cont <= k):
	f = ((((-1)**cont))*(x**(2*cont+1))/(factorial(2*cont+1))) 
	soma = soma + f
	cont = cont + 1
print(round(soma,10))	
	
-- EXECUTION TIME:
0.637092
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
